alignment-fix-1

--- a/_sass/jaswig/_j-meets-securex.scss
+++ b/_sass/jaswig/_j-meets-securex.scss
@@ -32,8 +32,11 @@
 }
 
 .ft-sz {
-  font-size: 18px !important;
+  font-size: 17px !important;
   width: 75%;
+  color: #a19585 !important;
+  font-weight: 400 !important;
+  line-height: 26px !important;
 }
 
 @media (max-width:424px) {
@@ -55,4 +58,24 @@
 .remove-mar {
   margin-left: 0px;
   margin-right: 0px;
+}
+
+.just-marg {
+  margin-left: 40px;
+}
+
+@media (min-width: $screen-md-min) {
+  .vertical-all {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 50%;
+    height: 45%;
+    margin: auto;
+  }
+}
+
+.relative-pos {
+  position: relative;
 }
